--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,36 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
+// =================================================================
+//
+//                        Main Page Styles
+//
+// =================================================================
+// Coded by Danny Pearson
+
+
+
+
+// =========================== Imports =============================
 
 @use "sass:map";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
 
-// Variables
 
-// Colours
 
-$color-bg-light1: #ffffff;
+
+
+
+// =========================== Colours =============================
+
 $color-bg-light2: #fcf7f0;
 $color-bg-dark: #140c02;
 
-// Sizing
+$color-pri-white: #ffffff;
+$color-pri-orange: #d9851e;
+
+
+
+
+
+// =========================== Sizing ==============================
 
 $padding: 3rem;
 $site-width: 102.4rem;
@@ -22,6 +42,14 @@ $breakpoints: (
     "laptop ": 1200px, //min
     "desktop": 1800px, //min
 );
+
+
+
+
+
+// =========================== Mixins ==============================
+
+// Respond to screen width breakpoints
 
 @mixin respond($screen) {
 
@@ -35,6 +63,8 @@ $breakpoints: (
     }
 }
 
+// Hide content when in phone viewport
+
 @mixin phone-hide() {
 
     @include respond(phone) {
@@ -43,20 +73,26 @@ $breakpoints: (
     }
 }
 
-//Animation
+
+
+
+
+// =========================  Animation ============================
+
+// Menu button animation
 
 @keyframes top {
 
     0% { 
         transform: translateY(0) rotate(0);
         transform-origin: center;
-        background-color: #d9851e; 
+        background-color: $color-pri-orange; 
     }
     30% { transform: translateY(1.1rem); }
     100% {
         transform: translateY(1.1rem) rotate(45deg);
         transform-origin: center;
-        background-color: #ffffff;
+        background-color: $color-pri-white;
     }
 }
 
@@ -72,15 +108,17 @@ $breakpoints: (
     0% { 
         transform: translateY(0) rotate(0);
         transform-origin: center;
-        background-color: #d9851e; 
+        background-color: $color-pri-orange; 
     }
     30% { transform: translateY(-1.1rem); }
     100% {
         transform: translateY(-1.1rem) rotate(-45deg);
         transform-origin: center;
-        background-color: #ffffff;
+        background-color: $color-pri-white;
     }
 }
+
+// Modal fade in and out
 
 @keyframes modal {
 
@@ -93,6 +131,18 @@ $breakpoints: (
         z-index: 50
     }
 }
+
+@keyframes menu {
+
+        0% { opacity: 0 }
+        100% { opacity: 1 }
+}
+
+
+
+
+
+// =========================== Global ==============================
 
 html {
     box-sizing: border-box;
@@ -141,17 +191,23 @@ time, mark, audio, video, input, textarea {
     vertical-align: baseline;
 }
 
-// Utilities
+
+
+
+
+// ========================= Utilities =============================
 
 .flex { display: flex; }
 .v-align { align-items: center; }
 .h-align { justify-content: center; }
 
-.hide-phone {
-    @include phone-hide();
-}
+.hide-phone { @include phone-hide() }
 
-// Main Styles
+
+
+
+
+// ========================== Header ===============================
 
 .site-header {
     flex-direction: column;
@@ -178,14 +234,14 @@ time, mark, audio, video, input, textarea {
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     font-weight: 700;
-    background-color: $color-bg-light1;
+    background-color: $color-pri-white;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), 0 0 5px -3px rgba(0, 0, 0, 1);
     transform: rotate(-5deg);
     height: min-content;
 
     &--orange {
         display: inline-block;
-        color: #d9851e;
+        color: $color-pri-orange;
         transform: translateY(0.2rem) rotateX(180deg);
     }
 
@@ -194,8 +250,6 @@ time, mark, audio, video, input, textarea {
     }
 
 }
-
-
 
 .search {
 
@@ -219,12 +273,13 @@ time, mark, audio, video, input, textarea {
 
         height: 3rem;
         width: 5rem;
-        background-color: #d9851e;
-        color: #ffffff;
+        background-color: $color-pri-orange;
+        color: $color-pri-white;
         border: 0;
         border-bottom-right-radius: 20px;
         border-top-right-radius: 20px;
         transition: transform 0.3s;
+        cursor: pointer;
         
         &:focus {
             outline: none;
@@ -261,6 +316,7 @@ time, mark, audio, video, input, textarea {
 
     &__item {
         list-style: none;
+        transition: all 0.7s;
         
         &:not(:last-of-type) {
             
@@ -270,19 +326,18 @@ time, mark, audio, video, input, textarea {
 
         & > a {
 
-            color: #d9851e;
+            color: $color-pri-orange;
             font-weight: 600;
             font-size: 1.1rem;
             transition: color 0.3s;
 
             &:hover {
 
-                color: #ffffff;
+                color: $color-pri-white;
             }
         }
     }
 
-    // @include phone-hide();
     @include respond(phone) {
 
         height: 70%;
@@ -297,7 +352,7 @@ time, mark, audio, video, input, textarea {
 
             & > a {
 
-                color: #ffffff;
+                color: $color-pri-white;
                 font-weight: 500;
                 font-size: 2rem;
                 margin-top: 5rem;
@@ -312,8 +367,8 @@ time, mark, audio, video, input, textarea {
     right: 0;
     width: 40%;
     height: 3rem;
-    background-color: #d9851e;
-    color: #ffffff;
+    background-color: $color-pri-orange;
+    color: $color-pri-white;
     justify-content: space-evenly;
     padding: 0 7rem;
     border-bottom-right-radius: 2rem;
@@ -330,6 +385,12 @@ time, mark, audio, video, input, textarea {
         padding: 0;
         position: unset;
         background-color: transparent;
+    }
+
+    & > a {
+
+        cursor: pointer;
+        color: $color-pri-white; 
     }
 
     .fab {
@@ -367,7 +428,7 @@ time, mark, audio, video, input, textarea {
     &__line {
         width: 3.4rem;
         height: 0.4rem;
-        background-color: #d9851e;
+        background-color: $color-pri-orange;
     }
 }
 
@@ -385,18 +446,23 @@ time, mark, audio, video, input, textarea {
     :nth-child(3) { animation: bottom 0.7s 0.1s 1 reverse both ;} 
 }
 
+
+
+
+
+// ============================ Main ===============================
+
 .main-wrapper {
     margin-top: 5rem;
     max-width: $site-width;
     height: 100%;
     flex-direction: column;
     box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3), 10px 10px 30px rgba(0, 0, 0, 0.2);
-    // box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 
     &__header {
         flex-direction: column;
         padding: $padding;
-        background-color: $color-bg-light1;
+        background-color: $color-pri-white;
 
         &--desc {
             margin: 2rem 5rem 0 5rem;
@@ -407,16 +473,13 @@ time, mark, audio, video, input, textarea {
 
     &__display {
         padding: $padding;
-        background-color: $color-bg-light1;
+        background-color: $color-pri-white;
     }
 
     @include respond(phone) { &__header, &__display { padding: 2rem } };
 }
 
-h1 {
-
-    font-size: 2.3rem;
-}
+h1 { font-size: 2.3rem; }
 
 .color-div {
 
@@ -427,7 +490,7 @@ h1 {
     }
 
     &--light {
-        background-color: #d9851e;
+        background-color: $color-pri-orange;
     }
 
     &--dark {
@@ -444,7 +507,7 @@ h1 {
     &__photo-box {
         flex-basis: 32%;
         margin-bottom: 2rem;
-        background-color: #ffffff;
+        background-color: $color-pri-white;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2), 0 0 5px -2px rgba(0, 0, 0, 0.5);
 
         @include respond(phone) {
@@ -460,9 +523,13 @@ h1 {
     }
 }
 
-main {
-    flex-grow: 1;
-}
+main { flex-grow: 1 }
+
+
+
+
+
+// =========================== Footer ==============================
 
 .footer {
 
@@ -477,9 +544,15 @@ main {
         width: 100%;
         bottom: 0;
         background: $color-bg-dark;
-        color: #d9851e;
+        color: $color-pri-orange;
     }
 }
+
+
+
+
+
+// ============================ Modal ==============================
 
 .modal {
 
@@ -497,11 +570,24 @@ main {
         width: 100%;
         flex-direction: column;
         align-items: center;
+        opacity: 0;
     }
 }
 
-.modal-open { animation: modal 0.7s 0.1s 1 both; }
-.modal-close { animation: modal 0.7s 0.1s 1 reverse both; }
+.modal-open { 
+    animation: modal 0.7s 0.1s 1 both;
+
+    & > * {
+        animation: menu 2s 0.1s 1 both;
+    }
+ }
+.modal-close { 
+    animation: modal 0.7s 0.1s 1 reverse both;
+
+    & > * {
+        animation: menu 0.7s 0.1s 1 reverse both;
+    }
+ }
 .no-scroll { overflow: hidden; }
 
 
